In Progress - Government 360 - Electrical Permit

--- a/displaytabs/tabs/GovernmentUI/RealEstateElectricalPermitProfileBox1.html
+++ b/displaytabs/tabs/GovernmentUI/RealEstateElectricalPermitProfileBox1.html
@@ -4,70 +4,64 @@
           <h3 class="box-title">Box 1 (For Owner/Applicant)</h3>
         </div>
         <div class="box-body" style="display: flex; flex-wrap: wrap;">
-            <div class="form-group" style="flex: 1; margin-left: 15px;">
-                <label>Name of Owner / Applicant</label>
-                <input type="text" class="form-control editRealEstateBuildingPermit" module="RealEstateBuildingPermitUI"
-                    name="assessedAmount">
+            <div class="form-group" style="flex: 4; margin-left: 15px;">
+                <label>Owner / Applicant First Name</label>
+                <input type="text" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI"
+                    name="ownerFirstName">
             </div>
             <div class="form-group" style="flex: 1; margin-left: 15px;">
-                <label>Last Name, First Name, M.I.</label>
-                <input type="text" class="form-control editRealEstateBuildingPermit" module="RealEstateBuildingPermitUI"
-                    name="assessedAmount">
+                <label>M.I.</label>
+                <input type="text" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI"
+                    name="ownerMI">
             </div>
-            <div class="form-group" style="flex: 1; margin-right: 15px; margin-left: 15px;">
+            <div class="form-group" style="flex: 4; margin-left: 15px;">
+                <label>Last Name</label>
+                <input type="text" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI"
+                    name="ownerLastName">
+            </div>
+            <div class="form-group" style="flex: 4; margin-right: 15px; margin-left: 15px;">
                 <label>Tax Acct. No.</label>
-                <input type="text" class="form-control editRealEstateBuildingPermit" module="RealEstateBuildingPermitUI"
-                    name="assessedAmount">
+                <input type="text" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI"
+                    name="taxAccountNo">
             </div>
         </div>
         <div class="box-body" style="display: flex; flex-wrap: wrap;">
             <div class="form-group" style="flex: 1; margin-left: 15px;">
                 <label>Owned By An Enterprise</label>
-                <select class="form-control">
+                <select class="form-control" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI"
+                name="forEnterprise">
                     <option>Yes</option>
                     <option>No</option>
                   </select>
             </div>
             <div class="form-group" style="flex: 1; margin-left: 15px;">
                 <label>Form of Ownership</label>
-                <input type="text" class="form-control editRealEstateBuildingPermit" module="RealEstateBuildingPermitUI"
-                    name="assessedAmount">
+                <input type="text" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI"
+                    name="formOfOwnership">
             </div>
             <div class="form-group" style="flex: 1; margin-right: 15px; margin-left: 15px;">
                 <label>Main Economic Activity / Kind of Business</label>
-                <input type="text" class="form-control editRealEstateBuildingPermit" module="RealEstateBuildingPermitUI"
-                    name="assessedAmount">
+                <input type="text" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI"
+                    name="businessType">
             </div>
         </div>
         <div class="box-body" style="display: flex; flex-wrap: wrap;">
-            <div class="form-group" style="flex: 1; margin-left: 15px;">
-                <label>Address</label>
-                <input type="text" class="form-control editRealEstateBuildingPermit" module="RealEstateBuildingPermitUI"
-                    name="assessedAmount">
-            </div>
-            <div class="form-group" style="flex: 1; margin-left: 15px;">
-                <label>No. Street, Barangay, City / Municipality</label>
-                <input type="text" class="form-control editRealEstateBuildingPermit" module="RealEstateBuildingPermitUI"
-                    name="assessedAmount">
+            <div class="form-group" style="flex: 2; margin-left: 15px;">
+                <label>Address (No. Street, Barangay, City / Municipality)</label>
+                <input type="text" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI"
+                    name="address">
             </div>
             <div class="form-group" style="flex: 1; margin-right: 15px; margin-left: 15px;">
                 <label>Telephone No.</label>
-                <input type="text" class="form-control editRealEstateBuildingPermit" module="RealEstateBuildingPermitUI"
-                    name="assessedAmount">
+                <input type="text" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI"
+                    name="telNo">
             </div>
         </div>
         <div class="box-body" style="display: flex; flex-wrap: wrap;">
             <div class="form-group" style="flex: 1; margin-left: 15px;">
-                <label>Location of Construction</label>
-                <input type="text" class="form-control editRealEstateBuildingPermit" module="RealEstateBuildingPermitUI"
-                    name="assessedAmount">
-            </div>
-            <div class="form-group" style="flex: 1; margin-left: 15px;">
-                <label>No. Street, Barangay, City / Municipality</label>
-                <input type="text" class="form-control editRealEstateBuildingPermit" module="RealEstateBuildingPermitUI"
-                    name="assessedAmount">
-            </div>
-            <div class="form-group" style="flex: 1; margin-right: 15px; margin-left: 15px;">
+                <label>Location of Construction (No. Street, Barangay, City / Municipality)</label>
+                <input type="text" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI"
+                    name="locationOfConstructionAddress">
             </div>
         </div>
         <div class="box-body" style="display: flex; flex-wrap: wrap;">
@@ -79,33 +73,42 @@
                     <div style="display: flex; flex-wrap: wrap;">
                         <div class="form-group" style="flex: 30%; margin-left: 15px;">
                             <div style="display: flex; margin: 5px;">
-                                <input type="checkbox" style="margin: 5px;"> New Installation
+                                <input type="checkbox" style="margin: 5px;" class="editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI"
+                                name="locationOfConstructionAddress"> New Installation
                             </div>
                             <div style="display: flex; margin: 5px;">
-                                <input type="checkbox" style="margin: 5px;"> Annual Inspection
+                                <input type="checkbox" style="margin: 5px;" class="editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI"
+                                name="locationOfConstructionAddress"> Annual Inspection
                             </div>
                             <div style="display: flex; margin: 5px;">
-                                <input type="checkbox" style="margin: 5px;"> Temporary
-                            </div>
-                        </div>
-                        <div class="form-group" style="flex: 30%; margin-left: 15px;">
-                            <div style="display: flex; margin: 5px;">
-                                <input type="checkbox" style="margin: 5px;"> Reconnection of Service Entrance
-                            </div>
-                            <div style="display: flex; margin: 5px;">
-                                <input type="checkbox" style="margin: 5px;"> Separation of Service Entrance
-                            </div>
-                            <div style="display: flex; margin: 5px;">
-                                <input type="checkbox" style="margin: 5px;"> Upgrading of Service Entrance
+                                <input type="checkbox" style="margin: 5px;" class="editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI"
+                                name="locationOfConstructionAddress"> Temporary
                             </div>
                         </div>
                         <div class="form-group" style="flex: 30%; margin-left: 15px;">
                             <div style="display: flex; margin: 5px;">
-                                <input type="checkbox" style="margin: 5px;"> Relocation of Service Entrance
+                                <input type="checkbox" style="margin: 5px;" class="editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI"
+                                name="locationOfConstructionAddress"> Reconnection of Service Entrance
                             </div>
                             <div style="display: flex; margin: 5px;">
-                                <input type="checkbox" style="margin: 5px;"> Others
-                                <input type="text" style="margin: 5px; margin-top: -5px;" class="form-control editRealEstateBuildingPermit" module="RealEstateBuildingPermitUI" name="assessedAmount">
+                                <input type="checkbox" style="margin: 5px;" class="editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI"
+                                name="locationOfConstructionAddress"> Separation of Service Entrance
+                            </div>
+                            <div style="display: flex; margin: 5px;">
+                                <input type="checkbox" style="margin: 5px;" class="editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI"
+                                name="locationOfConstructionAddress"> Upgrading of Service Entrance
+                            </div>
+                        </div>
+                        <div class="form-group" style="flex: 30%; margin-left: 15px;">
+                            <div style="display: flex; margin: 5px;">
+                                <input type="checkbox" style="margin: 5px;" class="editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI"
+                                name="locationOfConstructionAddress"> Relocation of Service Entrance
+                            </div>
+                            <div style="display: flex; margin: 5px;">
+                                <input type="checkbox" style="margin: 5px;" class="editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI"
+                                name="locationOfConstructionAddress"> Others
+                                <input type="text" style="margin: 5px; margin-top: -5px;" rowIndex="0" class="form-control editRealEstateElectricalPermit" module="RealEstateElectricalPermitUI" 
+                                name="locationOfConstructionAddress">
                             </div>
                         </div>
                     </div>
@@ -122,21 +125,24 @@
                         <div style="flex: 30%; margin: 10px;" class="form-group text-center">
                             <label>Total Connected Load</label>
                             <div style="display: flex;">
-                                <input type="text" class="form-control editRealEstateBuildingPermit" module="RealEstateBuildingPermitUI" name="assessedAmount">
+                                <input type="text" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI" 
+                                name="assessedAmount">
                                 <label style="margin-left: 15px;">kVA</label>
                             </div>
                         </div>
                         <div style="flex: 30%; margin: 10px;" class="form-group text-center">
                             <label>Total Transformer Capacity</label>
                             <div style="display: flex;">
-                                <input type="text" class="form-control editRealEstateBuildingPermit" module="RealEstateBuildingPermitUI" name="assessedAmount">
+                                <input type="text" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI" 
+                                name="assessedAmount">
                                 <label style="margin-left: 15px;">kVA</label>
                             </div>
                         </div>
                         <div style="flex: 30%; margin: 10px;" class="form-group text-center">
                             <label>Total Generators/UPS Capacity</label>
                             <div style="display: flex;">
-                                <input type="text" class="form-control editRealEstateBuildingPermit" module="RealEstateBuildingPermitUI" name="assessedAmount">
+                                <input type="text" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI" 
+                                name="assessedAmount">
                                 <label style="margin-left: 15px;">kVA</label>
                             </div>
                         </div>
