--- a/displaytabs/tabs/GovernmentUI/RealEstateElectricalPermitProfileBox2.html
+++ b/displaytabs/tabs/GovernmentUI/RealEstateElectricalPermitProfileBox2.html
@@ -13,27 +13,32 @@
                 <div class="box-body" style="display: flex;flex-wrap: wrap;">
                     <div style="flex: 90%; margin: 5px;">
                         <label>Name</label>
-                        <input class="form-control editRealEstateBuildingPermit" name=""/>
+                        <input type="text" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI" 
+                                name="assessedAmount"/>
                     </div>
                     <div style="flex: 90%; margin: 5px;">
                         <label>Address</label>
-                        <input class="form-control editRealEstateBuildingPermit" name=""/>
+                        <input type="text" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI" 
+                                name="assessedAmount"/>
                     </div>
                     <div style="flex: 22%; margin: 5px;">
                         <label>PRC #</label>
-                        <input class="form-control editRealEstateBuildingPermit" name=""/>
+                        <input type="text" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI" 
+                                name="assessedAmount"/>
                     </div>
                     <div style="flex: 22%; margin: 5px;">
                         <label>PTR #</label>
-                        <input class="form-control editRealEstateBuildingPermit"name=""/>
+                        <input class="form-control editRealEstateElectricalPermit"name=""/>
                     </div>
                     <div style="flex: 22%; margin: 5px;">
                         <label>Date Issued</label>
-                        <input class="form-control editRealEstateBuildingPermit" name=""/>
+                        <input type="text" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI" 
+                                name="assessedAmount"/>
                     </div>
                     <div style="flex: 22%; margin: 5px;">
                         <label>Place Issued</label>
-                        <input class="form-control editRealEstateBuildingPermit" name=""/>
+                        <input type="text" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI" 
+                                name="assessedAmount"/>
                     </div>
                 </div>
             </div>
@@ -46,11 +51,13 @@
                 <div class="box-body" style="display: flex;flex-wrap: wrap;">
                     <div style="flex: 90%; margin: 5px;">
                         <label>Name</label>
-                        <input class="form-control editRealEstateBuildingPermit" name=""/>
+                        <input type="text" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI" 
+                                name="assessedAmount"/>
                     </div>
                     <div style="flex: 90%; margin: 5px;">
                         <label>Address</label>
-                        <input class="form-control editRealEstateBuildingPermit" name=""/>
+                        <input type="text" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI" 
+                                name="assessedAmount"/>
                     </div>
                     <div style="flex: 30%; margin: 5px;">
                         <input type="checkbox" style="margin: 5px;"> Professional Electrical Engineer
