--- a/displaytabs/tabs/GovernmentUI/RealEstateElectricalPermitProfileBox4.html
+++ b/displaytabs/tabs/GovernmentUI/RealEstateElectricalPermitProfileBox4.html
@@ -7,22 +7,30 @@
             <label style="font-size: 15px;">Electrical Documents (Five Sets Each)</label>
             <div style="display: flex; flex-wrap: wrap;">
                 <div style="flex: 45%; display: flex;">
-                    <input type="checkbox" style="margin: 5px;"> Electrical Plan and Specifications
+                    <input type="checkbox" style="margin: 5px;" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI" 
+                    name="assessedAmount"> Electrical Plan and Specifications
                 </div>
                 <div style="flex: 45%; display: flex;">
-                    <input type="checkbox" style="margin: 5px;"> Special Fixtures and Equipment
+                    <input type="checkbox" style="margin: 5px;" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI" 
+                    name="assessedAmount"> Special Fixtures and Equipment
                 </div>
                 <div style="flex: 45%; display: flex;">
-                    <input type="checkbox" style="margin: 5px;"> Proposed Starting Date of Installation/Construction
-                    <input type="text" style="margin: 5px; margin-top: 0px; width: 150px;" class="form-control editRealEstateBuildingPermit" module="RealEstateBuildingPermitUI" name="assessedAmount">
+                    <input type="checkbox" style="margin: 5px;" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI" 
+                    name="assessedAmount"> Proposed Starting Date of Installation/Construction
+                    <input type="text" style="margin: 5px; margin-top: 0px; width: 150px;" rowIndex="0" class="form-control editRealEstateElectricalPermit" module="RealEstateElectricalPermitUI" 
+                    name="assessedAmount">
                 </div>
                 <div style="flex: 45%; display: flex;">
-                    <input type="checkbox" style="margin: 5px;"> Expected Date of Completion/Installation/Construction
-                    <input type="text" style="margin: 5px; margin-top: 0px; width: 150px;" class="form-control editRealEstateBuildingPermit" module="RealEstateBuildingPermitUI" name="assessedAmount">
+                    <input type="checkbox" style="margin: 5px;" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI" 
+                    name="assessedAmount"> Expected Date of Completion/Installation/Construction
+                    <input type="text" style="margin: 5px; margin-top: 0px; width: 150px;" rowIndex="0" class="form-control editRealEstateElectricalPermit" module="RealEstateElectricalPermitUI" 
+                    name="assessedAmount">
                 </div>
                 <div style="flex: 45%; display: flex;">
-                    <input type="checkbox" style="margin: 5px;"> Others&nbsp;(Specify)
-                    <input type="text" style="margin: 5px; margin-top: 0px;" class="form-control editRealEstateBuildingPermit" module="RealEstateBuildingPermitUI" name="assessedAmount">
+                    <input type="checkbox" style="margin: 5px;" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI" 
+                    name="assessedAmount"> Others&nbsp;(Specify)
+                    <input type="text" style="margin: 5px; margin-top: 0px;" rowIndex="0" class="form-control editRealEstateElectricalPermit" module="RealEstateElectricalPermitUI" 
+                    name="assessedAmount">
                 </div>
             </div>
         </div>
@@ -47,17 +55,25 @@
                     </div>
                     <div style="display: flex;">
                         <label style="flex: 2; margin: 2px;">ELECTRICAL</label>
-                        <label class="text-center" style="flex: 1; margin: 2px;"><input class="form-control editRealEstateBuildingPermit" name=""/></label>
-                        <label class="text-center" style="flex: 1; margin: 2px;"><input class="form-control editRealEstateBuildingPermit" name=""/></label>
-                        <label class="text-center" style="flex: 1; margin: 2px;"><input class="form-control editRealEstateBuildingPermit" name=""/></label>
-                        <label class="text-center" style="flex: 1; margin: 2px;"><input class="form-control editRealEstateBuildingPermit" name=""/></label>
+                        <label class="text-center" style="flex: 1; margin: 2px;"><input type="checkbox" style="margin: 5px;" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI" 
+                        name="assessedAmount"/></label>
+                        <label class="text-center" style="flex: 1; margin: 2px;"><input type="checkbox" style="margin: 5px;" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI" 
+                        name="assessedAmount"/></label>
+                        <label class="text-center" style="flex: 1; margin: 2px;"><input type="checkbox" style="margin: 5px;" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI" 
+                        name="assessedAmount"/></label>
+                        <label class="text-center" style="flex: 1; margin: 2px;"><input type="checkbox" style="margin: 5px;" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI" 
+                        name="assessedAmount"/></label>
                     </div>
                     <div style="display: flex;">
                         <label style="flex: 2; margin: 2px;">OTHERS (Specify)</label>
-                        <label class="text-center" style="flex: 1; margin: 2px;"><input class="form-control editRealEstateBuildingPermit" name=""/></label>
-                        <label class="text-center" style="flex: 1; margin: 2px;"><input class="form-control editRealEstateBuildingPermit" name=""/></label>
-                        <label class="text-center" style="flex: 1; margin: 2px;"><input class="form-control editRealEstateBuildingPermit" name=""/></label>
-                        <label class="text-center" style="flex: 1; margin: 2px;"><input class="form-control editRealEstateBuildingPermit" name=""/></label>
+                        <label class="text-center" style="flex: 1; margin: 2px;"><input type="checkbox" style="margin: 5px;" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI" 
+                        name="assessedAmount"/></label>
+                        <label class="text-center" style="flex: 1; margin: 2px;"><input type="checkbox" style="margin: 5px;" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI" 
+                        name="assessedAmount"/></label>
+                        <label class="text-center" style="flex: 1; margin: 2px;"><input type="checkbox" style="margin: 5px;" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI" 
+                        name="assessedAmount"/></label>
+                        <label class="text-center" style="flex: 1; margin: 2px;"><input type="checkbox" style="margin: 5px;" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI" 
+                        name="assessedAmount"/></label>
                     </div>
                 </div>
                 <div style="flex: 40%; display: flex; flex-direction: column;" >
@@ -69,19 +85,23 @@
                     <div class="box-body" style="display: flex;flex-wrap: wrap;">
                         <div style="flex: 90%; margin: 5px;">
                             <label>Name</label>
-                            <input class="form-control editRealEstateBuildingPermit" name=""/>
+                            <input type="checkbox" style="margin: 5px;" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI" 
+                            name="assessedAmount"/>
                         </div>
                         <div style="flex: 90%; margin: 5px;">
                             <label>Address</label>
-                            <input class="form-control editRealEstateBuildingPermit" name=""/>
+                            <input type="checkbox" style="margin: 5px;" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI" 
+                            name="assessedAmount"/>
                         </div>
                         <div style="flex: 40%; margin: 5px;">
                             <label>PRC #</label>
-                            <input class="form-control editRealEstateBuildingPermit" name=""/>
+                            <input type="checkbox" style="margin: 5px;" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI" 
+                            name="assessedAmount"/>
                         </div>
                         <div style="flex: 40%; margin: 5px;">
                             <label>Validity Date</label>
-                            <input class="form-control editRealEstateBuildingPermit" name=""/>
+                            <input type="checkbox" style="margin: 5px;" class="form-control editRealEstateElectricalPermit" rowIndex="0" module="RealEstateElectricalPermitUI" 
+                            name="assessedAmount"/>
                         </div>
                     </div>    
                 </div>
