--- a/displaytabs/tabs/GovernmentUI/RealEstatePlumbingPermitProfileBox1.html
+++ b/displaytabs/tabs/GovernmentUI/RealEstatePlumbingPermitProfileBox1.html
@@ -6,17 +6,17 @@
         <div class="box-body" style="display: flex; flex-wrap: wrap;">
             <div class="form-group" style="flex: 1; margin-left: 15px;">
                 <label>Name of Owner / Applicant</label>
-                <input type="text" class="form-control editRealEstateBuildingPermit" module="RealEstateBuildingPermitUI"
+                <input type="text" class="form-control editRealEstatePlumbingPermit" module="RealEstatePlumbingPermitUI"
                     name="assessedAmount">
             </div>
             <div class="form-group" style="flex: 1; margin-left: 15px;">
                 <label>Last Name, First Name, M.I.</label>
-                <input type="text" class="form-control editRealEstateBuildingPermit" module="RealEstateBuildingPermitUI"
+                <input type="text" class="form-control editRealEstatePlumbingPermit" module="RealEstatePlumbingPermitUI"
                     name="assessedAmount">
             </div>
             <div class="form-group" style="flex: 1; margin-right: 15px; margin-left: 15px;">
                 <label>Tax Acct. No.</label>
-                <input type="text" class="form-control editRealEstateBuildingPermit" module="RealEstateBuildingPermitUI"
+                <input type="text" class="form-control editRealEstatePlumbingPermit" module="RealEstatePlumbingPermitUI"
                     name="assessedAmount">
             </div>
         </div>
@@ -30,41 +30,41 @@
             </div>
             <div class="form-group" style="flex: 1; margin-left: 15px;">
                 <label>Form of Ownership</label>
-                <input type="text" class="form-control editRealEstateBuildingPermit" module="RealEstateBuildingPermitUI"
+                <input type="text" class="form-control editRealEstatePlumbingPermit" module="RealEstatePlumbingPermitUI"
                     name="assessedAmount">
             </div>
             <div class="form-group" style="flex: 1; margin-right: 15px; margin-left: 15px;">
                 <label>Main Economic Activity / Kind of Business</label>
-                <input type="text" class="form-control editRealEstateBuildingPermit" module="RealEstateBuildingPermitUI"
+                <input type="text" class="form-control editRealEstatePlumbingPermit" module="RealEstatePlumbingPermitUI"
                     name="assessedAmount">
             </div>
         </div>
         <div class="box-body" style="display: flex; flex-wrap: wrap;">
             <div class="form-group" style="flex: 1; margin-left: 15px;">
                 <label>Address</label>
-                <input type="text" class="form-control editRealEstateBuildingPermit" module="RealEstateBuildingPermitUI"
+                <input type="text" class="form-control editRealEstatePlumbingPermit" module="RealEstatePlumbingPermitUI"
                     name="assessedAmount">
             </div>
             <div class="form-group" style="flex: 1; margin-left: 15px;">
                 <label>No. Street, Barangay, City / Municipality</label>
-                <input type="text" class="form-control editRealEstateBuildingPermit" module="RealEstateBuildingPermitUI"
+                <input type="text" class="form-control editRealEstatePlumbingPermit" module="RealEstatePlumbingPermitUI"
                     name="assessedAmount">
             </div>
             <div class="form-group" style="flex: 1; margin-right: 15px; margin-left: 15px;">
                 <label>Telephone No.</label>
-                <input type="text" class="form-control editRealEstateBuildingPermit" module="RealEstateBuildingPermitUI"
+                <input type="text" class="form-control editRealEstatePlumbingPermit" module="RealEstatePlumbingPermitUI"
                     name="assessedAmount">
             </div>
         </div>
         <div class="box-body" style="display: flex; flex-wrap: wrap;">
             <div class="form-group" style="flex: 1; margin-left: 15px;">
                 <label>Location of Construction</label>
-                <input type="text" class="form-control editRealEstateBuildingPermit" module="RealEstateBuildingPermitUI"
+                <input type="text" class="form-control editRealEstatePlumbingPermit" module="RealEstatePlumbingPermitUI"
                     name="assessedAmount">
             </div>
             <div class="form-group" style="flex: 1; margin-left: 15px;">
                 <label>No. Street, Barangay, City / Municipality</label>
-                <input type="text" class="form-control editRealEstateBuildingPermit" module="RealEstateBuildingPermitUI"
+                <input type="text" class="form-control editRealEstatePlumbingPermit" module="RealEstatePlumbingPermitUI"
                     name="assessedAmount">
             </div>
             <div class="form-group" style="flex: 1; margin-right: 15px; margin-left: 15px;">
@@ -94,37 +94,37 @@
                         <div class="form-group" style="flex: 30%; margin-left: 15px;">
                             <div style="display: flex; margin: 5px;">
                                 <input type="checkbox" style="margin: 5px;"> Renovation
-                                <input type="text" style="margin: 5px; margin-top: -5px;" class="form-control editRealEstateBuildingPermit" module="RealEstateBuildingPermitUI" name="assessedAmount">
+                                <input type="text" style="margin: 5px; margin-top: -5px;" class="form-control editRealEstatePlumbingPermit" module="RealEstatePlumbingPermitUI" name="assessedAmount">
                             </div>
                             <div style="display: flex; margin: 5px;">
                                 <input type="checkbox" style="margin: 5px;"> Conversion
-                                <input type="text" style="margin: 5px; margin-top: -5px;" class="form-control editRealEstateBuildingPermit" module="RealEstateBuildingPermitUI" name="assessedAmount">
+                                <input type="text" style="margin: 5px; margin-top: -5px;" class="form-control editRealEstatePlumbingPermit" module="RealEstatePlumbingPermitUI" name="assessedAmount">
                             </div>
                             <div style="display: flex; margin: 5px;">
                                 <input type="checkbox" style="margin: 5px;"> Repair
-                                <input type="text" style="margin: 5px; margin-top: -5px;" class="form-control editRealEstateBuildingPermit" module="RealEstateBuildingPermitUI" name="assessedAmount">
+                                <input type="text" style="margin: 5px; margin-top: -5px;" class="form-control editRealEstatePlumbingPermit" module="RealEstatePlumbingPermitUI" name="assessedAmount">
                             </div>
                             <div style="display: flex; margin: 5px;">
                                 <input type="checkbox" style="margin: 5px;"> Moving
-                                <input type="text" style="margin: 5px; margin-top: -5px;" class="form-control editRealEstateBuildingPermit" module="RealEstateBuildingPermitUI" name="assessedAmount">
+                                <input type="text" style="margin: 5px; margin-top: -5px;" class="form-control editRealEstatePlumbingPermit" module="RealEstatePlumbingPermitUI" name="assessedAmount">
                             </div>
                         </div>
                         <div class="form-group" style="flex: 50%; margin-left: 15px;">
                             <div style="display: flex; margin: 5px;">
                                 <input type="checkbox" style="margin: 5px;"> Raising
-                                <input type="text" style="margin: 5px; margin-top: -5px;" class="form-control editRealEstateBuildingPermit" module="RealEstateBuildingPermitUI" name="assessedAmount">
+                                <input type="text" style="margin: 5px; margin-top: -5px;" class="form-control editRealEstatePlumbingPermit" module="RealEstatePlumbingPermitUI" name="assessedAmount">
                             </div>
                             <div style="display: flex; margin: 5px;">
                                 <input type="checkbox" style="margin: 5px;"> Demolition
-                                <input type="text" style="margin: 5px; margin-top: -5px;" class="form-control editRealEstateBuildingPermit" module="RealEstateBuildingPermitUI" name="assessedAmount">
+                                <input type="text" style="margin: 5px; margin-top: -5px;" class="form-control editRealEstatePlumbingPermit" module="RealEstatePlumbingPermitUI" name="assessedAmount">
                             </div>
                             <div style="display: flex; margin: 5px;">
-                                <input type="checkbox" style="margin: 5px;"> Accessory&nbsp;Building/Structure
-                                <input type="text" style="margin: 5px; margin-top: -5px;" class="form-control editRealEstateBuildingPermit" module="RealEstateBuildingPermitUI" name="assessedAmount">
+                                <input type="checkbox" style="margin: 5px;"> Accessory&nbsp;Plumbing/Structure
+                                <input type="text" style="margin: 5px; margin-top: -5px;" class="form-control editRealEstatePlumbingPermit" module="RealEstatePlumbingPermitUI" name="assessedAmount">
                             </div>
                             <div style="display: flex; margin: 5px;">
                                 <input type="checkbox" style="margin: 5px;"> Others&nbsp;(Specify)
-                                <input type="text" style="margin: 5px; margin-top: -5px;" class="form-control editRealEstateBuildingPermit" module="RealEstateBuildingPermitUI" name="assessedAmount">
+                                <input type="text" style="margin: 5px; margin-top: -5px;" class="form-control editRealEstatePlumbingPermit" module="RealEstatePlumbingPermitUI" name="assessedAmount">
                             </div>
                         </div>
                     </div>
