--- a/displaytabs/tabs/GovernmentUI/RealEstatePlumbingPermitProfileBox3.html
+++ b/displaytabs/tabs/GovernmentUI/RealEstatePlumbingPermitProfileBox3.html
@@ -1,34 +1,34 @@
 <div style="display: flex; flex-direction: column; flex: 100%; margin-left: 15px; margin-right: 15px;">
     <div class="box box-default">
         <div class="box-header">
-          <h3 class="box-title">Box 3 (Building Owner and Lot Owner)</h3>
+          <h3 class="box-title">Box 3 (Plumbing Owner and Lot Owner)</h3>
         </div>
         <div class="box-body" style="display: flex; flex-wrap: wrap;">
             <div style="flex: 45%; margin: 5px;">
                 <div class="box-header">
-                    <h3 class="box-title">Building Owner
+                    <h3 class="box-title">Plumbing Owner
                     </h3>
                 </div>
                 <div class="box-body" style="display: flex;flex-wrap: wrap;">
                     <div style="flex: 90%; margin: 5px;">
                         <label>Name</label>
-                        <input class="form-control editRealEstateBuildingPermit" name=""/>
+                        <input class="form-control editRealEstatePlumbingPermit" name=""/>
                     </div>
                     <div style="flex: 90%; margin: 5px;">
                         <label>Address</label>
-                        <input class="form-control editRealEstateBuildingPermit" name=""/>
+                        <input class="form-control editRealEstatePlumbingPermit" name=""/>
                     </div>
                     <div style="flex: 30%; margin: 5px;">
                         <label>C.T.C. #</label>
-                        <input class="form-control editRealEstateBuildingPermit" name=""/>
+                        <input class="form-control editRealEstatePlumbingPermit" name=""/>
                     </div>
                     <div style="flex: 30%; margin: 5px;">
                         <label>Date Issued</label>
-                        <input class="form-control editRealEstateBuildingPermit" name=""/>
+                        <input class="form-control editRealEstatePlumbingPermit" name=""/>
                     </div>
                     <div style="flex: 30%; margin: 5px;">
                         <label>Place Issued</label>
-                        <input class="form-control editRealEstateBuildingPermit" name=""/>
+                        <input class="form-control editRealEstatePlumbingPermit" name=""/>
                     </div>
                 </div>
             </div>
@@ -40,23 +40,23 @@
                 <div class="box-body" style="display: flex;flex-wrap: wrap;">
                     <div style="flex: 90%; margin: 5px;">
                         <label>Name</label>
-                        <input class="form-control editRealEstateBuildingPermit" name=""/>
+                        <input class="form-control editRealEstatePlumbingPermit" name=""/>
                     </div>
                     <div style="flex: 90%; margin: 5px;">
                         <label>Address</label>
-                        <input class="form-control editRealEstateBuildingPermit" name=""/>
+                        <input class="form-control editRealEstatePlumbingPermit" name=""/>
                     </div>
                     <div style="flex: 30%; margin: 5px;">
                         <label>C.T.C. #</label>
-                        <input class="form-control editRealEstateBuildingPermit" name=""/>
+                        <input class="form-control editRealEstatePlumbingPermit" name=""/>
                     </div>
                     <div style="flex: 30%; margin: 5px;">
                         <label>Date Issued</label>
-                        <input class="form-control editRealEstateBuildingPermit" name=""/>
+                        <input class="form-control editRealEstatePlumbingPermit" name=""/>
                     </div>
                     <div style="flex: 30%; margin: 5px;">
                         <label>Place Issued</label>
-                        <input class="form-control editRealEstateBuildingPermit" name=""/>
+                        <input class="form-control editRealEstatePlumbingPermit" name=""/>
                     </div>
                 </div>
             </div>
